fix alignment issues

--- a/docs/static_landing_page/css/landing_page_style.css
+++ b/docs/static_landing_page/css/landing_page_style.css
@@ -16,8 +16,9 @@
 }
 body {
 	background: #ffffff;
-	padding-top: 53px;
+	padding: 0px;
 }
+
 h1 {
 	font-family: 'TT Commons Bold', Arial, sans-serif;
 	font-style: normal;
@@ -43,13 +44,13 @@ h3 {
 	font-style: normal;
 	font-weight: normal;
 	font-size: 48px;
-	line-height: 52Spx;
+	line-height: 52px;
 	color: #ffffff;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 }
 h4 {
-	font-family: 'TT Commons Bold', Arial, sans-serif;
+	font-family: 'TT Commons Regular', Arial, sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 32px;
@@ -69,11 +70,11 @@ h5 {
 	-webkit-font-smoothing: antialiased;
 }
 h6 {
-	font-family: 'TT Commons Bold', Arial, sans-serif;
+	font-family: 'TT Commons Medium', Arial, sans-serif;
 	font-style: normal;
 	font-weight: bold;
-	font-size: 21px;
-	line-height: 20px;
+	font-size: 15px;
+	line-height: 18px;
 	color: #061058;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
@@ -192,6 +193,8 @@ li {
 /****MASTHEAD****/
 .masthead {
 	height: 100%;
+	padding-top: 120px;
+	padding-bottom: 30px;
 }
 .masthead-tabs {
 	border-radius: 20px;
@@ -360,7 +363,7 @@ li {
 	color: #ffffff;
 	background-color: #2364D2;
 	padding: 14px 0px 10px 0px;
-	margin: 0px 9px;
+	margin: 0px 0px;
 	width: 150px;
 	border-radius: 100px;
 	-moz-osx-font-smoothing: grayscale;
@@ -570,7 +573,7 @@ li.check-icon {
 	-webkit-font-smoothing: antialiased;
 }
 .footer-line {
-	width: 90%;
+	width: 100%;
 	height: 2px;
 	background-color: #3772CE;
 	opacity: 0.9;
